Fixed menu bar from wrapping
Menu toggle should no longer wrap on mobile devices.  Must add Viewport line to all pages.  Added some more styling and background to the footer.

--- a/style/footer.css
+++ b/style/footer.css
@@ -1,11 +1,15 @@
 #footer {
 	background-color: #171c8f;
+	background-image:  url('../img/clouds.png');
+	background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #footer-sections {
 	padding-top: 2%;
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 }
 .footer-section {
 	margin: 0 auto;
@@ -15,4 +19,33 @@
 
 #footer p {
 	color: white;
+}
+.footer-section h2 {
+	color: white;
+}
+.footer-section a {
+	color: white;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.custom-shape-divider-top-1669666420 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1669666420 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 36px;
+    transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1669666420 .shape-fill {
+    fill: #FFFFFF;
 }
