--- a/style/navbar.css
+++ b/style/navbar.css
@@ -147,6 +147,9 @@ nav ul {
   }
 }
 @media all and (max-width: 800px) {
+  .logo {
+    width: 70%;
+  }
   .logo img {
     width: 90%;
     display: inline-block;
